Dia 4 de setembro

--- a/notas.tex
+++ b/notas.tex
@@ -836,7 +836,7 @@ Logo
 $$\varphi=x^2y^3+y+D $$
 
 {\bf item c}
-$$W=\varphi(3,1)-\varphi(1,4)=\left[3^21^3+1+D\right]-\left[1^24^3+4+D\right]=10-68=--58$$
+$$W=\varphi(3,1)-\varphi(1,4)=\left[3^21^3+1+D\right]-\left[1^24^3+4+D\right]=10-68=-58$$
 \end{document}
 
 
